--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -21,7 +21,7 @@
 
   <h1>React ↔ Flask Integration</h1>
   
-  <!-- Input field and button for sending text to Flask -->
+
   <input id="inputText" type="text" placeholder="Enter text">
   <button onclick="sendTextToFlask()">Send to Flask</button>
 
@@ -79,7 +79,99 @@
       }
     }
 
-    // Fetch the received text every 3 seconds
+
+    setInterval(fetchReceivedText, 3000);
+  </script>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>React ↔ Flask Integration with Socket.IO</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
+    input, button {
+      margin: 10px;
+      padding: 8px;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- <h1>React ↔ Flask Integration with Socket.IO</h1> -->
+  
+  <!-- Input field and button for sending text to Flask -->
+  <!-- <input id="inputText" type="text" placeholder="Enter text">
+  <button onclick="sendTextToFlask()">Send to Flask</button>
+
+  <h2>Received from Flask:</h2> -->
+  <p id="receivedText"></p>
+  <div id="output"></div>
+
+  <!-- Include Socket.IO client -->
+  <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
+
+  <script>
+    // Connect to the Flask server using Socket.IO
+    const socket = io("http://127.0.0.1:5000");  // Correct connection URL
+
+    // Function to send text to Flask using Socket.IO
+    // function sendTextToFlask() {
+    //   const inputText = document.getElementById("inputText").value;
+    //   document.getElementById("output").innerHTML = "Sending: " + inputText; // Displaying the text being sent
+
+    //   // Emit 'send_text' event with the input text to Flask
+    //   socket.emit('send_text', { copiedText: inputText });
+    // }
+    let previousData = null;
+
+// Listen for the 'receive_text' event from Flask and update the output
+    socket.on('receive_text', function(data) {
+      // Check if previousData is null (i.e., it's the first time receiving data)
+      if (previousData === null) {
+        console.log(previousData);
+        previousData = data;
+        console.log('First data received');
+        // document.getElementById("output").innerHTML =  previousData.data;
+        document.getElementById("output").innerHTML = 'Received: ' + previousData.text.candidates[0].content.parts[0].text;
+      } 
+      // Compare the text from previousData and current data
+      else if (previousData?.text?.candidates[0]?.content?.parts[0]?.text !== data?.text?.candidates[0]?.content?.parts[0]?.text) {
+        previousData = data;
+        console.log('Text updated');
+        document.getElementById("output").innerHTML = 'Received: ' + previousData?.text?.candidates[0]?.content?.parts[0]?.text || "No text available";
+      }
+    });
+
+    // Fetch received text every 3 seconds using regular fetch (optional, if needed for API-based data)
+    async function fetchReceivedText() {
+      try {
+        const response = await fetch("http://127.0.0.1:5000/api/get-text");
+        
+        if (!response.ok) {
+          throw new Error(`HTTP error! Status: ${response.status}`);
+        }
+
+        //const data = await response.json();
+        // const parsedData = JSON.parse(response);
+        // const { candidates,content,text } = response;
+        // const {  } = candidates[0];
+        // const {  } = content.parts[0];
+      
+      } catch (error) {
+        console.error("Error fetching text:", error);
+        document.getElementById("receivedText").textContent = "Error fetching data.";
+      }
+    }
+
+    // Optionally, set interval for fetching the text every 3 seconds
     setInterval(fetchReceivedText, 3000);
   </script>
 </body>
